chore: migrate experience module